feat: merged update upload to one endpoint
